# data-serialization-attoparsec

./: README.md  data-serialization-attoparsec.cabal
src/Data/Serialization/Text/: Attoparsec.hs
