name:             data-serialization-attoparsec
version:          0.1.0
synopsis:         Serialization library for Attoparsec bindings
homepage:         http://github.com/mvoidex/data-serialization-attoparsec
author:           Alexandr `voidex` Ruchkin
license:          BSD3
cabal-version:    >= 1.10
build-type:       Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base                    >= 4 && < 5,
        data-serialization      >= 0.1 && < 0.2,
        bytestring              >= 0.9 && < 0.10,
        attoparsec              >= 0.10 && < 0.11
    exposed-modules:
        Data.Serialization.Text.Attoparsec
